--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,11 @@
-  <div id="heatmapContainer">
-    <svg id="svg" height="400" width="400" preserveAspectRatio="xMinYMin meet"></svg>
-  </div>
+<div style="height: 500px;">
+    0 <img id="colorScaleImage" src="" style="vertical-align: middle; height:20px; width:200px; padding: 15px;;"/> 30 kts
+    <div id="mapid" style="width:100%; height:100%;"></div>
 
+    <p>
+        speed:  {{speed}};
+    </p>
+    <p>
+        direction: {{direction}};
+    </p>
+</div>
