--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div style="height: 500px;">
+<div style="height: 600px; width: 600px;">
     0 <img id="colorScaleImage" src="" style="vertical-align: middle; height:20px; width:200px; padding: 15px;;"/> 30 kts
     <div id="mapid" style="width:100%; height:100%;"></div>
 
